examples/configmaps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-config
spec:
  containers:
    - name: test-container
      image: hellodk/kuard-amd64:1
      imagePullPolicy: Always
      volumeMounts:
        - name: config-volume
          mountPath: /config
  volumes:
    - name: config-volume
      configMap:
        name: game-config
  restartPolicy: Never
